Añadiendo el plugin de localStorage

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <p class="description"></p>
             <a href="#" class="remove">Remove Task</a>
 		</div>
-		
+
 		<hr>
 
       <footer>
@@ -99,6 +99,7 @@
 <script type="text/javascript" src="js/libs/bootstrap/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/libs/underscore-min.js"></script>
 <script type="text/javascript" src="js/libs/backbone-min.js"></script>
+<script type="text/javascript" src="js/libs/backbone.localStorage-min.js"></script>
 <script type="text/javascript" src="js/views/form.js"></script>
 <script type="text/javascript" src="js/views/list.js"></script>
 <script type="text/javascript" src="js/views/task.js"></script>
