--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
                           <input type="text" name="assigned" id="assigned" value="" />
                       </div>
                       <div>
-                          <input type="submit" value="Save" />
+                          <input type="submit" value="Save" class="btn btn-success" />
+                          <a href="#" class="btn btn-inverse">Cancel</a>
                       </div>
                   </fieldset>
               </form>
@@ -82,6 +83,7 @@
                 <h1>Task: <span class="title"></span></h1>
                 <h2>Assigned: <span class="assigned"></span></h2>
                 <p class="description"></p>
+                <a href="#edit" class="edit">Edit Task</a>
                 <a href="#" class="remove">Remove Task</a>
 		</div>
 
