--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<link rel="stylesheet" href="css/bootstrap-responsive.min.css">
 	<link rel="stylesheet" href="css/style.css">
 
-	<script src="js/libs/modernizr-2.5.3-respond-1.1.0.min.js"></script>
+	<script src="js/libs/modernizr.js"></script>
 </head>
 <body>
 <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
@@ -52,8 +52,25 @@
 		<!-- Main hero unit for a primary marketing message or call to action -->
 		<div id="home" class="hero-unit" style="display: none">
 			List of tasks
-            <ul id="tasklist">
-            </ul>
+                  <ul class="nav nav-tabs" id="myTabs">
+                    <li class="active"><a href="#todotasks">Home</a></li>
+                    <li><a href="#donetasks">Done Tasks</a></li>
+                  </ul>
+
+                  <div class="tab-content">
+
+                    <div class="tab-pane active" id="todotasks">
+                      <ul id="tasklist">
+                      </ul>
+                    </div>
+
+                    <div class="tab-pane" id="donetasks">
+                      <ul id="tasklist-done">
+
+                      </ul>
+                    </div>
+                  </div>
+
 		</div>
 
 		<div id="add" class="hero-unit" style="display: none">
@@ -100,17 +117,19 @@
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/libs/jquery-1.8.2.min.js"><\/script>')</script>
 
-<script type="text/javascript" src="js/libs/bootstrap/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/libs/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/libs/underscore-min.js"></script>
 <script type="text/javascript" src="js/libs/backbone-min.js"></script>
 <script type="text/javascript" src="js/libs/backbone.debug.js"></script>
 <script type="text/javascript" src="js/libs/backbone.localStorage-min.js"></script>
+<script type="text/javascript" src="js/views/tabs.js"></script>
 <script type="text/javascript" src="js/views/form.js"></script>
 <script type="text/javascript" src="js/views/task_list.js"></script>
 <script type="text/javascript" src="js/views/list.js"></script>
 <script type="text/javascript" src="js/views/task.js"></script>
 <script type="text/javascript" src="js/models/task.js"></script>
 <script type="text/javascript" src="js/collections/task.js"></script>
+<script type="text/javascript" src="js/models/tasker.js"></script>
 <script type="text/javascript" src="js/script.js"></script>
 
 </body>
