--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
 		</div>
 
 		<div id="add" class="hero-unit" style="display: none">
+            <div class="alert alert-error hide">
+              <button type="button" class="close" data-dismiss="alert">×</button>
+              <strong></strong>
+            </div>
               <form name="taskform" id="taskform">
                   <fieldset>
                       <div>
