--- a/index.html
+++ b/index.html
@@ -118,23 +118,7 @@
 <script type="text/template" id="tasktemplate">
     <a href="#view-<%= id %>"><%= title %></a> <a href="#edit-<%= id %>">Edit</a> <a href="#remove-<%= id %>">Remove</a>
 </script>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="js/libs/jquery-1.8.2.min.js"><\/script>')</script>
-
-<script type="text/javascript" src="js/libs/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/libs/underscore-min.js"></script>
-<script type="text/javascript" src="js/libs/backbone-min.js"></script>
-<script type="text/javascript" src="js/libs/backbone.debug.js"></script>
-<script type="text/javascript" src="js/libs/backbone.localStorage-min.js"></script>
-<script type="text/javascript" src="js/views/tabs.js"></script>
-<script type="text/javascript" src="js/views/form.js"></script>
-<script type="text/javascript" src="js/views/task_list.js"></script>
-<script type="text/javascript" src="js/views/list.js"></script>
-<script type="text/javascript" src="js/views/task.js"></script>
-<script type="text/javascript" src="js/models/task.js"></script>
-<script type="text/javascript" src="js/collections/task.js"></script>
-<script type="text/javascript" src="js/models/tasker.js"></script>
-<script type="text/javascript" src="js/script.js"></script>
+<script data-main="js/main" src="js/libs/require.js"></script>
 
 </body>
 </html>
